--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 				<!-- #lang -->
 				<div id="lang">
 					<h2 class="hidden">Choose your language</h2>
-					<a href="" class="active">EN</a>
+					<a href="#" class="active">EN</a>
 					<span class="seper">/</span>
-					<a href="" target="_blank">KO</a>
+					<a href="http://dergim.github.io/index_ko.html" target="_blank">KO</a>
 				</div>
 				<!-- #lang ends -->
 				
