--- a/index_ko.html
+++ b/index_ko.html
@@ -49,9 +49,9 @@
 				<!-- #lang -->
 				<div id="lang">
 					<h2 class="hidden">언어를 선택해주세요</h2>
-					<a href="" target="_blank">EN</a>
+					<a href="http://dergim.github.io/index.html" target="_blank">EN</a>
 					<span class="seper">/</span>
-					<a href="" class="active">KO</a>
+					<a href="#" class="active">KO</a>
 				</div>
 				<!-- #lang ends -->
 				
