--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 										</p>
 									</div>
 									<div class="links">
-										<a href="" target="_blank">GO TO SITE</a><a href="https://www.behance.net/gallery/47189243/Noahs-Arc-Architecture-Firm" target="_blank">SEE DESIGN</a>
+										<a href="http://dergim.github.io/noahsArc/index.html" target="_blank">GO TO SITE</a><a href="https://www.behance.net/gallery/47189243/Noahs-Arc-Architecture-Firm" target="_blank">SEE DESIGN</a>
 									</div>
 								</li>
 								<li>
@@ -279,7 +279,7 @@
 										</p>
 									</div>
 									<div class="links">
-										<a href="" target="_blank">GO TO SITE</a><a href="https://www.behance.net/gallery/47188771/Prie-Web-Agency" target="_blank">SEE DESIGN</a>
+										<a href="http://dergim.github.io/prie/index.html" target="_blank">GO TO SITE</a><a href="https://www.behance.net/gallery/47188771/Prie-Web-Agency" target="_blank">SEE DESIGN</a>
 									</div>
 								</li>
 								<li>
@@ -293,7 +293,7 @@
 										</p>
 									</div>
 									<div class="links">
-										<a href="" target="_blank">GO TO SITE</a>
+										<a href="http://dergim.github.io/allInOne/index.html" target="_blank">GO TO SITE</a>
 										<a href="https://www.behance.net/gallery/47189101/ALL-IN-ONE" target="_blank">SEE DESIGN</a>
 									</div>
 								</li>
@@ -308,7 +308,7 @@
 										</p>
 									</div>
 									<div class="links oneLink">
-										<a href="" target="_blank">GO TO SITE</a><!-- <a href="">SEE DESIGN</a> -->
+										<a href="http://dergim.github.io/fourPlanets/index.html" target="_blank">GO TO SITE</a><!-- <a href="">SEE DESIGN</a> -->
 									</div>
 								</li>
 								<li>
@@ -322,7 +322,7 @@
 										</p>
 									</div>
 									<div class="links">
-										<a href="" target="_blank">GO TO SITE</a><a href="https://www.behance.net/gallery/37764945/AMe-(event-guide)-tri-g" target="_blank">SEE DESIGN</a>
+										<a href="http://dergim.github.io/ame/index.html" target="_blank">GO TO SITE</a><a href="https://www.behance.net/gallery/37764945/AMe-(event-guide)-tri-g" target="_blank">SEE DESIGN</a>
 									</div>
 								</li>
 								<li>
