--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<h2 class="hidden">Choose your language</h2>
 					<a href="#" class="active">EN</a>
 					<span class="seper">/</span>
-					<a href="http://dergim.github.io/index_ko.html" target="_blank">KO</a>
+					<a href="http://dergim.github.io/index_ko.html">KO</a>
 				</div>
 				<!-- #lang ends -->
 				
