--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 	</head>
 
-	<body>
+	<body scroll="no">
 		
 		<!-- #wrapper -->
 		<div id="wrapper">
@@ -100,18 +100,19 @@
 								</svg>
 							</a>
 						</li>
-						<li class="instaIcon"><a href="https://www.instagram.com/tri.g.work/" title="Go to Instagram" target="_blank">
-							<svg width="17px" height="17px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.41421;" aria-labelledby="instaTitle instaDesc" role="img">
-							<title id="instaTitle">Instagram icon</title>
-							<desc id="instaDesc">Instagram</desc>
-							<path d="M30.367,6.5c0,-2.7 -2.191,-4.892 -4.891,-4.892l-18.992,0c-2.7,0 -4.891,2.192 -4.891,4.892l0,19c0,2.7 2.191,4.892 4.891,4.892l18.992,0c2.7,0 4.891,-2.192 4.891,-4.892l0,-19Z" style="fill:none;stroke-width:4px;stroke:#2e2a51;"/><circle cx="16" cy="16" r="7.383" style="fill:none;stroke-width:4px;stroke:#2e2a51;"/><circle cx="25.439" cy="6.842" r="2.057" style="fill:#2e2a51;"/></svg>
-						</a></li>
 						<li class="behanceIcon"><a href="https://www.behance.net/tri-g" title="Go to Behance" target="_blank">
 							<svg width="17px" height="17px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:1.41421;" aria-labelledby="behanceTitle behanceDesc" role="img">
 							<title id="behanceTitle">behance icon</title>
 							<desc id="behanceDesc">behance</desc>
 							<g><path d="M9.376,11.037c0,0 2.132,-0.162 2.132,-2.714c0,-2.55 -1.446,-3.807 -3.657,-3.807l-7.574,-0.012l0,14.092l7.75,0c0,0 3.875,0.122 3.875,-4.228c0,0 0.285,-3.331 -2.526,-3.331ZM3.095,6.618l3.875,0c0,0 1.326,0.022 1.326,1.741c0,1.782 -1.326,1.782 -1.326,1.782l-3.875,0l0,-3.523l0,0ZM7.322,16.482l-4.227,0l0,-4.228l4.227,0c0,0 2.114,0.022 2.114,2.114c0,2.092 -1.809,2.114 -2.114,2.114Z" style="fill:#2e2a51;fill-rule:nonzero;"/><path d="M17.891,8.027c-5.293,0 -5.284,5.284 -5.284,5.284c0,0 -0.352,5.285 5.284,5.285c0,0 4.932,0 4.932,-4.228l-2.818,0c0,0 0,2.114 -2.114,2.114c0,0 -2.113,0 -2.113,-2.818c0,0 5.636,0 7.045,0c0,-1.41 0,-5.637 -4.932,-5.637l0,0ZM15.778,12.254c0,0 -0.047,-2.113 2.113,-2.113c2.16,0 2.114,2.113 2.114,2.113l-4.227,0l0,0Z" style="fill:#2e2a51;fill-rule:nonzero;"/><rect x="15.073" y="5.913" width="5.637" height="1.409" style="fill:#2e2a51;"/></g></svg>
 						</a></li>
+						<li class="instaIcon"><a href="https://www.instagram.com/tri.g.work/" title="Go to Instagram" target="_blank">
+							<svg width="17px" height="17px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.41421;" aria-labelledby="instaTitle instaDesc" role="img">
+							<title id="instaTitle">Instagram icon</title>
+							<desc id="instaDesc">Instagram</desc>
+							<path d="M30.367,6.5c0,-2.7 -2.191,-4.892 -4.891,-4.892l-18.992,0c-2.7,0 -4.891,2.192 -4.891,4.892l0,19c0,2.7 2.191,4.892 4.891,4.892l18.992,0c2.7,0 4.891,-2.192 4.891,-4.892l0,-19Z" style="fill:none;stroke-width:4px;stroke:#2e2a51;"/><circle cx="16" cy="16" r="7.383" style="fill:none;stroke-width:4px;stroke:#2e2a51;"/><circle cx="25.439" cy="6.842" r="2.057" style="fill:#2e2a51;"/></svg>
+						</a></li>
+						
 					</ul>
 				</div>
 				
@@ -289,7 +290,7 @@
 										<p class="serif">- Web Portal -</p>
 										<span class="underline"></span>
 										<p>Demographics: 20 to 45.<span class="break"></span>
-											All in one provides information on various subjects. Each section of articles was put together tightly in a simple way for better user experience.
+											It provides information on various subjects. Each section of articles was put together tightly in a simple way for better user experience.
 										</p>
 									</div>
 									<div class="links">
