--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en" class="no-js">
 	<head>
 		<meta charset="utf-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>derGim - web designer + front-end developer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
 		<link rel="shortcut icon" type="image/png" href="imgs/favi.png" />
-		<meta name="description" itemprop="description" content="Welcome! I'm a web designer and front-end developer based in Seoul. Check out my work and say hi to me." />
-		<meta name="keywords" itemprop="keywords" content="웹디자이너, 퍼블리셔, 프론트엔드, 개발, 제이커리, 자바스크립트, 디자인, UI 디자인, 모바일디자인, 반응형, 반응협웹, Front-end Developer, github, git, Tri-g, Web Designer, UI design, UX design, 2d Artist, 2d drawing, html5, xhtml, css, css3, javascript, jquery" />
+		<meta name="description" content="Welcome! I'm a web designer and front-end developer based in Seoul. Check out my work and say hi to me." />
+		<meta name="keywords" content="웹디자이너, 퍼블리셔, 프론트엔드, 개발, 제이커리, 자바스크립트, 디자인, UI 디자인, 모바일디자인, 반응형, 반응협웹, Front-end Developer, github, git, Web Designer, UI design, UX design, 2d Artist, 2d drawing, html5, xhtml, css, css3, javascript, jquery" />
 		
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500" rel="stylesheet">
@@ -15,16 +15,14 @@
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
 		<link rel="stylesheet" type="text/css" href="css/main.css" />
 		
-		<script src="https://code.jquery.com/jquery-3.2.1.min.js"
-	  	integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  		crossorigin="anonymous"></script>
-		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+		<script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+		<script type="text/javascript" src="js/jquery-1.11.3.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 
 		<script type="text/javascript" src="js/main.js"></script>
 		
 
-		<script>
+		<!-- <script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -33,12 +31,16 @@
 		  ga('create', 'UA-92028114-1', 'auto');
 		  ga('send', 'pageview');
 
-		</script>
+		</script> -->
 
 	</head>
 
 	<body>
-		
+		<div class="loadBg">
+		  <div class="num">
+		    <p>0%</p>
+		  </div>
+		</div>
 		<!-- #wrapper -->
 		<div id="wrapper">
 
@@ -128,11 +130,10 @@
 						<div class="groupping">
 							<h2>ABOUT</h2>
 							<div class="groupping1">
-
 								<p>
 									<span class="bold">Hi Folks,</span>
 									I am a web designer and front-end developer with previous exprerience working as a graphic designer.
-									<span class="break">
+									<span class="break"></span>
 									Having worked in various fields, such as UI Design, Charactor Design, Photo-Retouching and Fashion helps me build and design a great web application for any requirements.
 								</p>
 
@@ -532,7 +533,7 @@
 									I have more works on instagram and behance, 
 									<span class="breakLater"></span>
 									Please check them out if interested.
-									<span class="break">
+									<span class="break"></span>
 									If you have any questions, feel free to contact me <span class="breakLater"></span>via <a href="mailTo:dergim.work@gmail.com" title="Email">EMAIL</a> or send me a message via <a href="https://www.behance.net/dergim-be" title="Go to Behance" target="_blank">BEHANCE</a>.
 								</p>
 
@@ -555,7 +556,7 @@
 	
 			<!-- footer -->
 			<footer class="hide">
-				<address>copyright 2017</address>
+				<address>copyright 2018</address>
 			</footer>
 			<!-- footer ends -->
 
