--- a/fourPlanets/index.html
+++ b/fourPlanets/index.html
@@ -36,6 +36,17 @@
 	</head>
 	<body>
 
+		<div class="loading">
+			<div class="dots"></div>
+			<div class="dots"></div>
+			<div class="dots"></div>
+			<div class="dots"></div>
+			<div class="black"></div>
+			<div class="black"></div>
+			<div class="black"></div>
+			<div class="black"></div>
+		</div>
+
 		<!-- #wrapper -->
 		<div id="wrapper" class="defaultBg">
 			
