--- a/noahsArc/index.html
+++ b/noahsArc/index.html
@@ -36,9 +36,18 @@
 		
 	</head>
 	<body>
+
+		<!-- .loading -->
+			<div class="loading">
+				<div class="forRel">
+					<div class="spinner"></div>
+				</div>
+			</div>
+			<!-- .loading ends -->
 		
 		<!-- #wrapper -->
 		<div id="wrapper">
+			
 
 			<!-- header -->
 			<header>
@@ -406,12 +415,12 @@
 				<!-- footer ends -->
 			</div>
 
-			<div class="loadingPage">
+			<!-- <div class="loadingPage">
 				<span></span>
 
 				<span></span>
 				<p>Loading...</p>
-			</div>
+			</div> -->
 		</div>
 		<!-- #wrapper ends -->
 	
