--- a/prie/index.html
+++ b/prie/index.html
@@ -33,7 +33,17 @@
 		</script>
 	</head>
 	<body>
-		
+		<!-- .loading -->
+		<div class="loading">
+			<div class="forRel">
+				<div class="dot"></div>
+				<div class="dot"></div>
+				<div class="dot"></div>
+				<div class="dot"></div>
+			</div>
+		</div>
+		<!-- .loading ends -->
+
 		<!-- #wrapper -->
 		<div id="wrapper">
 			<div class="deco first"></div>
