--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 				<section id="work">
 					<h2 class="hide">Work</h2>
 					<ul>
-						<li class="active">
+						<li>
 
 							<div class="groupping">
 								<div class="groupping1">
@@ -301,7 +301,7 @@
 							</div>
 
 						</li>
-						<li>
+						<li class="active">
 
 							<div class="groupping">
 								<div class="groupping1">
@@ -389,7 +389,7 @@
 											<p class="visitSite"><a href="http://dergim.github.io/prie/index.html" target="_blank">VISIT SITE</a></p>
 											<h2>PRIE</h2>
 											<h3 class="openSans">DESCRIPTION</h3>
-											<p class="descrip">Websites or web agency have a tendency to be busy on the eye. The sensory overload can have you wanting to leave the page. Prie's target audience is young entrepreneurs who understand how a webpage can make a client to perceive them differently. The site is designed to be simple but still informative, and with the right color palette to express their goal as a web agency.</p>
+											<p class="descrip">Websites or web agency have a tendency to be busy on the eye. It could have you wanting to leave the page. Prie's target audience is young entrepreneurs who understand how a webpage can make a client to perceive them differently. The site is designed to be simple but still informative, and with the right color palette to express their goal as a web agency.</p>
 											<h4 class="openSans">WHAT IS MADE OF</h4>
 											<ul>
 												<li>HTML5</li>
@@ -492,9 +492,9 @@
 					
 					<!-- .pagination -->
 					<div class="pagination">
+						<span><span></span></span>
+						<span><span></span></span>
 						<span class="active"><span></span></span>
-						<span><span></span></span>
-						<span><span></span></span>
 						<span><span></span></span>
 						<span><span></span></span>
 					</div>
